--- a/RandAugment/Untitled.ipynb
+++ b/RandAugment/Untitled.ipynb
@@ -345,6 +345,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "unindent does not match any outer indentation level (augmentations.py, line 87)",
+     "output_type": "error",
+     "traceback": [
+      "Traceback \u001b[0;36m(most recent call last)\u001b[0m:\n",
+      "  File \u001b[1;32m\"/opt/conda/lib/python3.7/site-packages/IPython/core/interactiveshell.py\"\u001b[0m, line \u001b[1;32m3331\u001b[0m, in \u001b[1;35mrun_code\u001b[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "  File \u001b[1;32m\"<ipython-input-55-8e312d818e8b>\"\u001b[0m, line \u001b[1;32m2\u001b[0m, in \u001b[1;35m<module>\u001b[0m\n    from RandAugment import RandAugment\n",
+      "\u001b[0;36m  File \u001b[0;32m\"/opt/conda/lib/python3.7/site-packages/RandAugment/__init__.py\"\u001b[0;36m, line \u001b[0;32m2\u001b[0;36m, in \u001b[0;35m<module>\u001b[0;36m\u001b[0m\n\u001b[0;31m    from RandAugment.augmentations import RandAugment\u001b[0m\n",
+      "\u001b[0;36m  File \u001b[0;32m\"/opt/conda/lib/python3.7/site-packages/RandAugment/augmentations.py\"\u001b[0;36m, line \u001b[0;32m87\u001b[0m\n\u001b[0;31m    f=CubicSpline(np.arange(img.shape[-1]), img.cpu(), axis=-1)\u001b[0m\n\u001b[0m                                                               ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unindent does not match any outer indentation level\n"
+     ]
+    }
+   ],
+   "source": [
+    "from torchvision.transforms import transforms\n",
+    "from RandAugment import RandAugment\n",
+    "\n",
+    "transform_train = transforms.Compose([\n",
+    "    transforms.RandomCrop(32, padding=4),\n",
+    "    transforms.RandomHorizontalFlip(),\n",
+    "    transforms.ToTensor(),\n",
+    "    transforms.Normalize(_CIFAR_MEAN, _CIFAR_STD),\n",
+    "])\n",
+    "\n",
+    "# Add RandAugment with N, M(hyperparameter)\n",
+    "transform_train.transforms.insert(0, RandAugment(N, M))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
